[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconx"
version = "1.4.0"
description = "All-in-one Reconnaissance & Pentesting Toolkit"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "mk017-hk" }]
requires-python = ">=3.10"
keywords = ["reconnaissance", "pentesting", "security", "scanner", "dns", "subdomain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "aiohttp>=3.9.0",
    "dnspython>=2.4.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "python-whois>=0.8.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]
config = [
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
reconx = "reconx.cli:cli"

[project.urls]
Homepage = "https://github.com/mk017-hk/ReconX"
Repository = "https://github.com/mk017-hk/ReconX"
"Bug Tracker" = "https://github.com/mk017-hk/ReconX/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
reconx = ["wordlists/*.txt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["reconx"]
omit = ["tests/*"]
